src/main/grammar/ksml.bnf
{
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
  psiClassPrefix="Ksml"
  psiImplClassSuffix="Impl"
  parserClass="com.tttsaurus.ksml.grammar._KsmlParser"
  psiPackage="com.tttsaurus.ksml.grammar.psi"
  psiImplPackage="com.tttsaurus.ksml.grammar.psi.impl"
  elementTypeHolderClass="com.tttsaurus.ksml.grammar.psi.KsmlTypes"
  elementTypeClass="com.tttsaurus.ksml.language.KsmlElementType"
  tokenTypeClass="com.tttsaurus.ksml.language.KsmlTokenType"

  mixin("code_decl")="com.tttsaurus.ksml.language.psi.KsmlCodeDeclMixin"
  implements("code_decl")="com.tttsaurus.ksml.language.psi.KsmlCodeDeclInterface"

  mixin("module_decl")="com.tttsaurus.ksml.language.psi.KsmlModuleDeclMixin"

  tokens = [
    AT='@'

    MODULE='module'
    REQUIRES='requires'
    EXPORT='export'
    GL_VERSION='gl_version'
    GL_REQUIRES='gl_requires'
    FEATURE='feature'
    CODE='code'

    IDENTIFIER='regexp:[A-Za-z_][A-Za-z_0-9]*'
    NUMBER='regexp:[0-9]+'
    CODE_BLOCK='regexp:"""([^"]|("[^"])|(""[^"]))*"""'

    EOL = 'regexp:\r?\n'
    WHITE_SPACE='regexp:[ \t]+'
    COMMENT='regexp://[^\n]*|/\*([^*]|\*+[^*/])*\*+/'
  ]
}

file ::= item*

item ::= ksml_annotation
        | code_comment
        | WHITE_SPACE
        | EOL

code_comment ::= COMMENT

ksml_annotation ::= module_decl
                  | requires_decl
                  | gl_version_decl
                  | gl_requires_decl
                  | export_decl
                  | feature_decl
                  | code_decl

module_decl ::= AT MODULE IDENTIFIER EOL

requires_decl ::= AT REQUIRES IDENTIFIER EOL

gl_version_decl ::= AT GL_VERSION NUMBER IDENTIFIER? EOL

gl_requires_decl ::= AT GL_REQUIRES NUMBER IDENTIFIER? EOL

feature_decl ::= AT FEATURE IDENTIFIER EOL

export_decl ::= AT EXPORT IDENTIFIER? EOL

code_decl ::= AT CODE CODE_BLOCK EOL?
{
  methods=[getFunctionName; getMetadata]
}
